fixed contact container overflow

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -144,4 +144,23 @@
         padding-bottom: 1rem;
     }
 
+    footer p {
+        margin-bottom: 1rem;
+        padding-bottom: 1rem;
+    }
 }
+
+@media screen and (max-width: 400px) {
+    .contact-info-upper-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 1rem;
+        word-break: break-word;
+    }
+
+    .contact-info-upper-container a, .contact-info-upper-container p{
+        display: block;
+        width: 100%;
+    }
+    }
